<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <group android:checkableBehavior="single">-->


    <item
        android:id="@+id/nav_play"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/nav_play">
    </item>

    <item
        android:id="@+id/nav_player_stats"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_player_stats">
    </item>

    <item
        android:id="@+id/nav_purchase_packs"
        android:icon="@android:drawable/btn_star"
        android:title="@string/nav_purchase_packs">
    </item>

    <item
        android:id="@+id/nav_open_packs"
        android:icon="@drawable/ic_open_in_new_black_24dp"
        android:title="@string/nav_open_packs">
    </item>

    <item
        android:id="@+id/nav_browse_collection"
        android:icon="@drawable/ic_collections_black_24dp"
        android:title="@string/nav_browse_collection">
    </item>
</menu>